[package]
name = "recipe-book-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
axum = "0.6.20"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
reqwest = "0.11.10"
libsql-client = "0.31.11"
shuttle-secrets = "0.35.2"
anyhow = "1.0.78"
shuttle-turso = "0.35.2"